# ai-tools

./: .gitignore  AGENTS.md  Modelfile  README.md  pyproject.toml  test.py
img_tools/: img_conv.py  img_desc.py  img_exif.py
img_tools/prompts/: AMATEUR_LORA.md  AMATEUR_LORA_NEUTRAL.md  LORA.md
src/cli_chat/: AGENT.md  file_tools.py  main.py  tool_runtime.py  tui_handler.py
src/img_tools/: img_desc.py  img_exif.py
src/img_tools/prompts/: AMATEUR_LORA_NEUTRAL.md  AMATEUR_T2I.md  AUTHENTIC_DESC.md  CHAR_LORA.md  Z_IMAGE_T2I.md  Z_IMAGE_T2I_short.md
src/lora_dataset/: FACTS.md  ai.py  constants.py  main.py  test.py  utils.py
src/lora_dataset/dataset/: img11.txt  img2.txt  img5.txt  img6.txt  img8.txt
src/lora_dataset/prompts/: CHAR_LORA.md  PROMPT_DESC.md  PROMPT_EDIT.md
src/lora_dataset/ref_imgs/: img1.jpg.txt  img10.jpeg.txt  img20.jpg.txt  img3.jpg.txt  img4.jpg.txt  img7.webp.txt  img9.jpeg.txt
src/prompt_eval/: IDEAL_OP.md  PROMPT1.md  PROMPT2.md  main.py  utils.py
src/prompt_eval/prompts/: PROMPT_EDIT.md
src/react_agent/: main.py
src/runpod/: pull_hf_dataset.sh
src/yt_spider/: common.py  scrape_videos.py  search_videos.py
yt_spider/: scrape_videos.py
